# daneel-web

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  start.sh  stop.sh
.asimov/: roadmap.yaml  warmup.json
.cargo-husky/hooks/: pre-commit
.claude/: HANDOFF.md
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: lib.rs
src/: index.html  main.rs  vectors.rs
