[package]
name = "daneel-web-frontend"
version = "0.1.0"
edition = "2021"
description = "Leptos WASM frontend for DANEEL Web Dashboard"
authors = ["Louis C. Tavares <rex@mollendorff.ai>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# WebSocket
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console", "Window", "Location",
    "HtmlCanvasElement", "CanvasRenderingContext2d",
    "MouseEvent", "Element", "DomRect"
] }
console_error_panic_hook = "0.1"

# HTTP for fetching vectors
reqwasm = "0.5"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
